# library_backend_cpp

./: .gitignore  .last_backup_stamp  CMakeLists.txt  README.md  library.db  library_app.py  library_appOLD.py  library_backendOLD.cpp  library_backendOLD.h  library_design.docx  mainOLD.cpp  test.book
backup/: library_backup.sql
data/: library.db
flutter_frontend_arm/: Dockerfile  README.md  run-arm.sh
flutter_frontend_windows/: README.md  pubspec.yaml  run-windows.ps1
flutter_frontend_windows/lib/: main.dart
java_frontend/: pom.xml
java_frontend_arm/: Dockerfile  run-arm.sh
src/: console_menu.cpp  library_backend — копия.h  library_backend — копия.txt  library_backend.cpp  library_backend.h  main — копия.txt  main.cpp
